kubernetes-networks/canary/web-deploy-canary-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-v2
  namespace: canary
  labels:
    app: web
spec:
  selector:
    app: web
    version: v2.0.0
  type: ClusterIP
#  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
#web-svc-cip 10.96.172.21
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-svc-v2
  namespace: canary
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      version: v2.0.0
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web
        version: v2.0.0
    spec:
      containers:
      - name: web
        image: atalabirchuk/otus:lab_1_v1
        volumeMounts:
          - name: app
            mountPath: /app
        livenessProbe:
          tcpSocket:
            port: 8000     
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
      volumes:
      - name: app
        emptyDir: {}
