kubernetes-networks/canary/web-ingress-canary.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary
  namespace: canary
  #namespace: canary
  labels:
    app: web  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/canary: "true"
    #nginx.ingress.kubernetes.io/canary-weight: "100"
    #nginx.ingress.kubernetes.io/canary-by-header-value: "123"
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: web-svc
          servicePort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary-2
  namespace: canary
  #namespace: canary
  labels:
    app: web  
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "100"
    nginx.ingress.kubernetes.io/canary-by-header: "123"
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: web-svc-v2
          servicePort: 8000
